code refactoring, add crone